<resources>
    <string name="app_name">NutriApp</string>
    <string name="facebook_app_id">859978761023277</string>
    <string name="fb_login_protocol_scheme">fb859978761023277</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nutrihealth">NutriHealth</string>
    <string name="descripcion_principal">Una alimentacion sana es la base de todo</string>
    <string name="digite_correo">Digite un correo electronico</string>
    <string name="digite_contraseña">Digite la contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_registro">Registro</string>
    <string name="llena_campos">Llena todos los campos.</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="repite_contraseña">Repite la contraseña</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="alimentacion">Alimentacion</string>
    <string name="contacta">Contacta con nosotros</string>
    <string name="info_nosotros">Sobre nosotros</string>
    <string name="ingresa_datos">Ingresa tus datos</string>
    <string name="consejos">Consejos</string>
    <string name="correo_desarrollo">nutrihealth@gmail.com</string>
    <string name="title_activity_consejos">Consejos</string>
    <string name="title_activity_ingresodatos">Ingreso de datos</string>
    <string name="informacion_cargar_datos">Ingrese los datos cuando vayas evolucionando, creciendo o rebajando de peso y altura.</string>
    <string name="recomendacion_actualizar_datos">Se recomienda hacer este proceso cada 3 meses para actualizar tus datos.</string>
    <string name="actualizar">Actualizar</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="consejo_del_dia">Consejo del día.</string>
    <string name="tu_info">Tu información</string>
    <string name="bienvenido">Bienvenido a NutriApp</string>
    <string name="informacion_home">A continuación podrás navegar por la aplicación, en el menu encontraras todas las secciones pertinentes.</string>
</resources>
