<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consejos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/consejos" />
        <item
            android:id="@+id/nav_alientacion"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/alimentacion" />
        <item
            android:id="@+id/nav_datos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ingresa_datos" />
    </group>

    <item android:title="Desarrolladores">
        <menu>
            <item
                android:id="@+id/nav_contacta"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contacta" />
            <item
                android:id="@+id/nav_nosotros"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/info_nosotros" />
        </menu>
    </item>

</menu>
